--- a/frontend/src/app/themes/guardian/page.scss
+++ b/frontend/src/app/themes/guardian/page.scss
@@ -81,7 +81,7 @@
         width: 100%;
         display: flex;
         flex-direction: row;
-        padding: 0px 0px 16px 0px;
+        padding: 0px 0px 40px 0px;
         justify-content: flex-end;
 
         button {
